# Atlas

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/atlas-agent/: Cargo.toml
crates/atlas-agent/src/: error.rs  lib.rs  state.rs  tool.rs  types.rs
crates/atlas-core/: Cargo.toml
crates/atlas-core/src/: lib.rs
crates/atlas-mcp/: Cargo.toml
crates/atlas-mcp/src/: error.rs  handler.rs  lib.rs  server.rs  types.rs
examples/: mcp_server.rs  simple_agent.rs
