[package]
name = "atlas-agent"
version = "0.1.0"
edition = "2021"
description = "Agent system for the Atlas framework"
authors = ["Atlas Team"]
license = "MIT"

[dependencies]
atlas-core = { path = "../atlas-core" }
atlas-mcp = { path = "../atlas-mcp" }

# Async runtime
tokio = { version = "1.32", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
futures = "0.3"
tracing = "0.1"
uuid = { version = "1.4", features = ["v4", "serde"] }

# AI integration
openai = { version = "1.0", optional = true }
anthropic = { version = "0.1", optional = true }

[features]
default = []
openai = ["dep:openai"]
anthropic = ["dep:anthropic"]

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
pretty_assertions = "1.4"
