[package]
name = "atlas-mcp"
version = "0.1.0"
edition = "2021"
description = "Model Context Protocol implementation for the Atlas framework"
authors = ["Atlas Team"]
license = "MIT"

[dependencies]
atlas-core = { path = "../atlas-core" }

# Async runtime
tokio = { version = "1.32", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# HTTP server
axum = "0.6"
tower = "0.4"
tower-http = { version = "0.4", features = ["trace"] }

# Utilities
futures = "0.3"
tracing = "0.1"
uuid = { version = "1.4", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
pretty_assertions = "1.4"
reqwest = { version = "0.11", features = ["json"] }
